Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-140409

QML base type not propagated in index files

XMLWordPrintable

    • 28bac9b29 (dev)
    • DaVinci 125, DaVinci 126, DaVinci 127

      Although QtQuick.Item inherits from QtObject, QML types that inherit from Item only show inheritance information about QtObject within the Qt Quick module.

      For example, https://doc.qt.io/qt-6/qml-qtquick-image-members.html shows information about QtObject but https://doc.qt.io/qt-6/qml-qtquick-controls-abstractbutton-members.html does not.

      The problem appears to be that the qml-base-type attribute is not defined for the qmlclass element describing QtQuick.Item in the qtquick.index file.

        For Gerrit Dashboard: QTBUG-140409
        # Subject Branch Project Status CR V

            david.boddie David Boddie
            david.boddie David Boddie
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes