QDoc: Record information about QML base types

Update tests to reflect the change, adding a placeholder Item where
it is needed.

Fixes: QTBUG-140409
Change-Id: Ic0191cb157fcbbade226a7bc11c842312451bd4b
Reviewed-by: Topi Reiniö <topi.reinio@qt.io>